tests unitaires avec spring

--- a/TPS/eshop-spring-jpa/pom.xml
+++ b/TPS/eshop-spring-jpa/pom.xml
@@ -63,6 +63,14 @@
 		</dependency>
 
 
+		<!-- SPRING TEST -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
+
 		<!-- JUNIT -->
 		<dependency>
 			<groupId>junit</groupId>
